--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
 <body class="fixed hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
 
-    <header class="main-header">
+    <header id="bzs-index-main-header" class="main-header">
 
         <!-- Logo -->
         <a class="logo" href="#" data-href="/home">
@@ -70,10 +70,9 @@
                             <li class="user-body">
                                 <div class="row">
                                     <div class="col-xs-4 text-center">
-                                        <a href="#">Followers</a>
+                                        <a href="#">Friends</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
-                                        <a href="#">Friends</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Group</a>
@@ -81,10 +80,9 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-4 text-center">
-                                        <a href="#">${current_user_followers}</a>
+                                        <a href="#">${current_user_friends}</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
-                                        <a href="#">${current_user_friends}</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
                                         <a href="#">${current_user_groups}</a>
@@ -98,7 +96,11 @@
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                    % if login_status == True:
+                                    <button onclick="javascript:bzsIndexSignout()" class="btn btn-danger">Sign Out</button>
+                                    % else:
+                                    <button onclick="javascript:bzsIndexSignin()" class="btn btn-primary">Sign In</button>
+                                    % endif
                                 </div>
                             </li>
                         </ul>
@@ -114,7 +116,7 @@
         </nav>
     </header>
     <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
+    <aside id="bzs-index-main-sidebar" class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
             <!-- Sidebar user panel -->
@@ -155,17 +157,6 @@
                         <span>Forums</span>
                         <span class="pull-right-container">
                         </span>
-                    </a>
-                </li>
-                % endif
-
-                % if user_is_standard_user:
-                <li>
-                    <a href="#" data-href="/events">
-                        <div class="ion ion-person-stalker"></div>
-                        <span>Events</span>
-                        <span class="pull-right-container">
-                    	</span>
                     </a>
                 </li>
                 % endif
@@ -290,7 +281,7 @@
         </div>
     </div>
     <!-- /.content-wrapper -->
-    <footer class="main-footer">
+    <footer id="bzs-index-main-footer" class="main-footer">
         <div class="pull-right hidden-xs">
             <b>Version</b> ${placeholder_version_number}
         </div>
@@ -300,6 +291,7 @@
 <!-- ./wrapper -->
 
 
+<!-- Input dialog -->
 <div class="modal fade" id="dialog-input-string-container" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content">
     <form id="dialog-input-string-form" method="" action="">
         <div class="modal-header">
@@ -320,31 +312,57 @@
     </form>
 </div></div></div>
 
+<!-- Null dialog, content to be filled by $.load(). -->
+<div class="modal fade" id="dialog-template-container" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content" id='dialog-template-container-content'>
+</div></div></div>
+<!-- end of Null dialog -->
 
-<!-- jQuery 2.2.3 -->
-<script src="/static/plugins/jQuery/jquery-2.2.3.min.js"></script>
-<!-- jQuery Mobile 1.4.5 -->
-<script src="/static/plugins/jQueryMobile/jquery.mobile-1.4.5.min.js"></script>
-<!-- Bootstrap 3.3.6 -->
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
-<!-- FastClick -->
-<script src="/static/plugins/fastclick/fastclick.min.js"></script>
-<!-- Sparkline -->
-<script src="/static/plugins/sparkline/jquery.sparkline.min.js"></script>
-<!-- jvectormap -->
-<script src="/static/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="/static/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-<!-- SlimScroll 1.3.0 -->
-<script src="/static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-<!-- DataTables -->
-<script src="/static/plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="/static/plugins/datatables/dataTables.bootstrap.min.js"></script>
-<!-- ChartJS 1.0.1 -->
-<script src="/static/plugins/chartjs/Chart.min.js"></script>
-<!-- AdminLTE App -->
-<script src="/static/dist/js/app.js"></script>
-<!-- bzShare App -->
-<script src="/static/dist/js/bzs.js"></script>
-<!-- End of loading -->
+<div id="bzs-index-scripts">
+    <!-- jQuery 2.2.3 -->
+    <script src="/static/plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <!-- jQuery Mobile 1.4.5 -->
+    <script src="/static/plugins/jQueryMobile/jquery.mobile-1.4.5.min.js"></script>
+    <!-- Bootstrap 3.3.6 -->
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <!-- FastClick -->
+    <script src="/static/plugins/fastclick/fastclick.min.js"></script>
+    <!-- Sparkline -->
+    <script src="/static/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <!-- jvectormap -->
+    <script src="/static/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="/static/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <!-- SlimScroll 1.3.0 -->
+    <script src="/static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+    <!-- DataTables -->
+    <script src="/static/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/static/plugins/datatables/dataTables.bootstrap.min.js"></script>
+    <!-- ChartJS 1.0.1 -->
+    <script src="/static/plugins/chartjs/Chart.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="/static/dist/js/app.js"></script>
+    <!-- bzShare App -->
+    <script src="/static/dist/js/bzs.js"></script>
+    <!-- Post loading scripts -->
+    <script>
+
+    var bzsIndexSignin = function() {
+        bzsDialogTemplateLoad('/user/login');
+        return ;
+    }
+
+    var bzsIndexSignout = function() {
+        $.ajax({
+            method: 'POST',
+            url: '/user/operation_logout',
+            data: ''
+        }).complete(function() {
+            bzsReloadMainIndex();
+            return ;
+        })
+        return ;
+    }
+
+    </script>
+</div>
 </body>
 </html>
